testsuite/tests/typing-short-paths/short-paths.compilers.reference
Line 29, characters 8-9:
29 | let y = x + x
             ^
Error: This expression has type "'a Int.Map.t"
       but an expression was expected of type "int"
Line 2, characters 0-1:
2 | A;;
    ^
Error: Unbound constructor "A"
Line 2, characters 0-1:
2 | B;;
    ^
Error: Unbound constructor "B"
Line 4, characters 0-7:
4 | include M
    ^^^^^^^
Error: Syntax error
Line 4, characters 0-6:
4 | module L = struct
    ^^^^^^
Error: Syntax error
Line 4, characters 0-6:
4 | module L = struct
    ^^^^^^
Error: Syntax error


Line 4, characters 0-4:
4 | type t1 = A
    ^^^^
Error: Syntax error

